<resources>
    <string name="app_name">PicMob</string>
    <string name="facebook_app_id">642655972787958</string>
    <string name="fb_id_2">478175216035725</string>
    <string name="pls_check_your_internet">Please check your Internet Connection</string>
    <string name="Home">Home</string>
    <string name="myorders">My Orders</string>
    <string name="mycards">My Card</string>
    <string name="settings">Settings</string>
    <string name="info_help">Info / Help</string>
    <string name="contacts">Contacts</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="valid_msg_email">Enter a valid Email</string>
    <string name="string_search_location">Search Location</string>
    <string name="timeIcon">&#xf017;</string>
    <string name="toolbar_title_set_location">Search Location</string>
    <string name="gpsTitle">Gps Disabled</string>
    <string name="gpsMessage">Please enable gps to use this app.</string>
    <string name="settingButton">Setting</string>
    <string name="exitButton">Exit</string>
    <string name="Are_u_sure_to_logout">Are you sure you want to logout from app</string>
    <string name="cancel">Cancel</string>
    <string name="picmob">PICMOB</string>
    <string name="string_mob">MOB</string>
    <string name="string_facebook">FACEBOOK</string>
    <string name="string_instagram">INSTAGRAM</string>
    <string name="pls_enter_old_pass">Please Enter Password</string>
    <string name="old_pass_should_be_minimum">The Password Field must be at least 6 characters in length</string>
    <string name="pls_enter_new_pass">Please Enter Confirm Password</string>
    <string name="new_password_and_confirm_notmatch">Password does not match</string>
    <string name="pick_image_intent_text">choose one</string>
    <string name="pls_enter_cardno">Please Enter Card Number</string>
    <string name="pls_enter_name">Please Enter Name</string>
    <string name="pls_enter_date">Please Enter Date</string>
    <string name="pls_enter_cvv">Please Enter CVV</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="dont_have_an_acount">Dont Have an Acount? </string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="forgot_password">Forgot password? </string>
    <string name="click_here">Click Here</string>
    <string name="or">or</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="guest_user">Guest User</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="nice_to_see_you">Nice to see you :)</string>
    <string name="select_information">Select Information</string>
    <string name="single_click_to_select_the_photo_and">Single Click to select the photo and</string>
    <string name="double_click_to_enlarge_the_photo">hold to enlarge the photo</string>
    <string name="ok">OK</string>
    <string name="payment_method">Payment Method</string>
    <string name="credit_card">Credit Card</string>
    <string name="paypal">Paypal</string>
    <string name="next">NEXT</string>
    <string name="close">Close</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_phone_number">Phone Number</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="select_country">Select Country</string>
    <string name="enter_country">Enter Country</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_post_code">Enter Post code</string>
    <string name="price_colon">Price : </string>
    <string name="total_colon">Total : </string>
    <string name="parcel_machine">Parcel machine</string>
    <string name="latvia_estonia_lithuania">Latvia, Estonia, Lithuania</string>
    <string name="courier">Courier</string>
    <string name="postal_services">Postal services</string>
    <string name="europe_union">European Union</string>
    <string name="qty">QTY</string>
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="saturation">Saturation</string>
    <string name="save">Save</string>
    <string name="enter_registered_email_id_for_otp">Enter registered email id for OTP</string>
    <string name="send_otp">Send OTP</string>
    <string name="otp_sent_on_your_email_id">OTP sent on your email id</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="select_quantity">Select Quantity:</string>
    <string name="select_giftbox">Select giftbox:</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="save_card_information_once_and_payment_details_fill_automatically_on_end_of_order">Save card information once and payment details fill automatically on end of order</string>
    <string name="card_number">Card Number</string>
    <string name="name">Name</string>
    <string name="mm_yy">MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="thank_you_for_your_order">Thank you for your order</string>
    <string name="we_have_received_your_order_and">We have received your order and</string>
    <string name="it_will_be_finished_in_two_days">it will be finished in two days.</string>
    <string name="back_to_first_page">Back to first PAGE</string>
    <string name="payment">Payment:</string>
    <string name="total">Total</string>
    <string name="pay">Pay</string>
    <string name="total_quantity">Total Quantity: </string>
    <string name="add_photos">Add Photos</string>
    <string name="select_color">Select Color:</string>
    <string name="select_size">Select Size:</string>
    <string name="reset_your_password">Reset your Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="paper">Paper</string>
    <string name="cropping">Cropping</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="save_your_information_once_and_delivery_details">Save your information once and delivery details</string>
    <string name="fill_automatically_on_end_of_order">fill automatically on end of order.</string>
    <string name="sign_up">Sign up</string>
    <string name="your_cart_is_empty">Your Cart is Empty</string>
    <string name="add_product">Add Product</string>
    <string name="checkout">Checkout</string>
    <string name="orders">Orders -</string>
    <string name="shipping">Shipping:</string>
    <string name="place">Place:</string>
    <string name="select_album">Select album:</string>
    <string name="photo_album">Photo Album</string>
    <string name="giftbox">Giftbox</string>
    <string name="omniva_parcel_machine">Omniva parcel machine</string>
    <string name="omniva_courier">Omniva courier</string>
    <string name="postal_services_latvija">Postal services \"Latvijas Pasts\"</string>
    <string name="pls_enter_contact">Please Enter Contact Number</string>
    <string name="pls_enter_country">Please Enter Country</string>
    <string name="pls_enter_city">Please Enter City</string>
    <string name="pls_enter_address">Please Enter Address</string>
    <string name="pls_enter_postcode">Please Enter Post code</string>
    <string name="delivery">Delivery</string>
    <string name="edit">Edit</string>
    <string name="fill_otp">Fill OTP</string>
    <string name="pls_enter_first_name">Please Enter First Name</string>
    <string name="pls_enter_lastname">Please Enter Last Name</string>
    <string name="pls_enter_email">Please Enter Email</string>
    <string name="pls_enter_password">Please Enter Password</string>
    <string name="hello">Hello !</string>
    <string name="order_placed">Order Placed</string>
    <string name="payment_details">Payment Details</string>
    <string name="selected_photos">Selected Photos</string>
    <string name="pls_Select_at_least_one_picture">Please select at least one Picture</string>
    <string name="photos_overview">Photos Overview</string>
    <string name="print_frame">Print Frame</string>
    <string name="products">Products</string>
    <string name="select_parameters">Select Parameters</string>
    <string name="pls_select_any_one_paper">Please Select any one Paper</string>
    <string name="pls_select_any_one_cropping">Please Select any one Cropping</string>
    <string name="photos_uploading">Photos Uploading</string>
    <string name="your_order">Your Order</string>
    <string name="profile_updated">Profile Updated !</string>
    <string name="Are_u_sure_To_delete">Are you sure you want to delete ?</string>
    <string name="delete">Delete</string>
    <string name="prints">Print</string>
    <string name="framing">Framing:</string>
    <string name="paper_colon">Paper:</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="gift_envelopes">Gift Envelopes</string>
    <string name="account">Account</string>
    <string name="about_us">About Us</string>
    <string name="send">Send</string>
    <string name="apply">Apply</string>
    <string name="contact_us">Contact Us</string>
    <string name="enter_code">Enter Code</string>
    <string name="enter_promotional_or_gift_code">Enter Promotional or Gift Code</string>
    <string name="ordering">Ordering</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="myaccount">My Account</string>
    <string name="offers">Offers</string>
    <string name="pay_ment">Payment</string>
    <string name="returns_claims">Returns/Claims</string>
    <string name="shipping_delivery">Shipping/Delivery</string>
    <string name="pls_enter_correct_email">Please Enter Correct Email Address</string>
    <string name="password_must_be_minimum">Password should be minimum 6 characters</string>
    <string name="enter_a_location">Enter a location</string>
    <string name="nearby_stations">Nearby stations</string>
    <string name="pending">Pending</string>
    <string name="declined">Declined</string>
    <string name="processing">Processing</string>
    <string name="completed">Completed</string>
    <string name="do_not_turn">Do not turn off your Phone or close the app. Make sure you have a strong internet connection.</string>
    <string name="select_case_category">Select Case Category</string>
    <string name="got_a_question_we_d_love_to_hear_from">Got a question? We\'d love to hear from</string>
    <string name="you_send_us_a_message_and_we_ll_respond">you. Send us a message and we\'ll respond</string>
    <string name="as_soon_as_possible">as soon as possible.</string>
    <string name="namestar">Name *</string>
    <string name="e_mailstar">E-mail *</string>
    <string name="telephone_number">Telephone number *</string>
    <string name="case_category">Case Category *</string>
    <string name="message">Message *</string>
    <string name="pls_select_case_category">Please Select Case Category</string>
    <string name="pls_enter_message">Please Enter Message</string>
    <string name="please_select_a_topic">Please select a topic</string>
    <string name="successfully_shared">Successfully Shared</string>
    <string name="pls_select_country">Please Select Country</string>
    <string name="pls_select_country_first">Please Select Country First</string>
    <string name="confirm">Confirm</string>
    <string name="pls_confirm_all_images">Please Confirm all images.</string>
    <string name="crop">Crop</string>
    <string name="fit_paper">Fit Paper</string>
</resources>